# T3-Platform

./: .env.example  .gitignore  LC_5PBP_031226.docx  LC_ES_031326.docx  LC_PD_031326.pptx  LC_TECH_031326.docx  README.md  run.sh
backend/: requirements.txt
backend/app/: database.py  main.py
backend/app/middleware/: auth.py
backend/app/routers/: alerts.py  analytics.py  audience.py  content.py  ethics.py  factcheck.py  hde.py  improvement.py  keys.py  monitoring.py  queries.py  scan.py  sources.py  webhooks.py
backend/app/services/: anomaly.py  audience_targeting.py  consumer_factcheck.py  content_generator.py  ethics_monitor.py  hallucination.py  improvement_tracker.py  orchestrator.py  parser.py  query_engine.py  scheduler.py  source_intelligence.py  webhook_dispatcher.py
backend/migrations/: 001_api_keys.sql  002_webhooks.sql  003_billing.sql  004_core_tables.sql
docs/: integration-architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  run.sh  tailwind.config.js
frontend/src/: App.jsx  index.css  supabase.js
frontend/src/components/: Alerts.jsx  ApiKeys.jsx  Audience.jsx  AuthPage.jsx  Billing.jsx  Claims.jsx  ContentGenerator.jsx  Dashboard.jsx  ErrorBoundary.jsx  Ethics.jsx  FactChecker.jsx  FullPipeline.jsx  Globe.jsx  HDE.jsx  HomePage.jsx  Integrations.jsx  LandingPage.jsx  LiveQuery.jsx  Marquee.jsx  Monitoring.jsx  Onboarding.jsx  Settings.jsx  Sidebar.jsx  Sources.jsx  VisibilityScan.jsx  Webhooks.jsx  WorldMap.jsx  countriesData.js  stateData.js
frontend/src/services/: billing.js  sentinel.js
sdks/javascript/: README.md  package.json
sdks/javascript/src/: client.js  exceptions.js  index.d.ts  index.js
sdks/python/: README.md  pyproject.toml
sdks/python/t3_sentinel/: __init__.py  client.py  exceptions.py  wrappers.py
supabase/functions/ai-query/: index.ts
supabase/functions/fact-check/: index.ts
supabase/functions/generate-content/: index.ts
supabase/functions/stripe-checkout/: index.ts
supabase/functions/stripe-portal/: index.ts
supabase/functions/stripe-webhook/: index.ts
