[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "t3-sentinel"
version = "0.1.0"
description = "T3 Sentinel — AI Hallucination Detection SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "hallucination", "detection", "llm", "safety", "t3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
openai    = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
all       = ["openai>=1.0.0", "anthropic>=0.20.0"]
dev       = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage   = "https://t3tx.com"
Repository = "https://github.com/t3platform/t3-sentinel-python"
Issues     = "https://github.com/t3platform/t3-sentinel-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["t3_sentinel*"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.black]
line-length    = 99
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version      = "3.9"
strict              = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "--cov=t3_sentinel --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["t3_sentinel"]
